--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=56X8LL3;Database=BookDetailDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "Key": "ThisIsAReallyStrongSecretKey123456!",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "ExpireMinutes": 60
+  }
 }
